grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    dotted_name: $ => prec.left(2, sep1($.identifier, choice('?.','.',))),

    // Patterns

    config_expr: $ => seq(
      '{',
      optional(choice(
        $.config_entries,
        seq(
          '\n',
          optional($.config_entries)
        )
      )),
      '}'
    ),
    
    config_entries: $ => seq(
      $.config_entry,
      repeat(seq(
        choice(
          ',',
          seq(
            optional(','),
            '\n'
          )
        ),
        $.config_entry
      )),
      optional(','),
      optional('\n')
    ),
    
    config_entry: $ => choice(
      seq(
        $.test,
        choice(':', '=', '+='),
        $.test
      ),
      $.dictionary_splat,
      $.if_entry
    ),

    assignment: $ => seq(
      field('left', $.dotted_name),
      choice(
        seq('=', field('right', choice($.dotted_name,$.expression,))),
        seq(':', field('type', $.type), '=', field('right', $.expression)),
        alias(seq(':',field('type', $.type)),'null_assignment'),
      ),
    ),

    augmented_assignment: $ => seq(
      field('left', $.dotted_name),
      field('operator', choice(
        '+=', '-=', '*=', '/=', '//=', '%=', '**=',
        '>>=', '<<=', '&=', '^=', '|=',
      )),
      field('right', $.expression),
    ),

    type: $ => choice(
      $.schema_type,
      $.union_type,
      $.function_type,
      $.basic_type,
      $.list_type,
      $.dict_type,
      $.literal_type,
    ),
    basic_type: _ => choice('str', 'int', 'float', 'bool', 'any'),
    string: $ => seq(
      $.string_start,
      repeat($.string_content),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    _string_content: _ => token.immediate(/[^\\{}]+/),

    integer: $ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        field('multiplier', optional(choice('n', 'u', 'm', 'k', 'K', 'M', 'G', 'T', 'P', 'Ki', 'Mi', 'Gi', 'Ti', 'Pi'))),
      ),
    )),

    float: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(seq(
        choice(
          seq(digits, '.', optional(digits), optional(exponent)),
          seq(optional(digits), '.', digits, optional(exponent)),
          seq(digits, exponent),
        ),
      ));
    },

    identifier: _ => /[_$a-zA-Z][_$\p{XID_Continue}]*/,

    true: _ => 'True',
    false: _ => 'False',
    none: _ => 'None',
    undefined: _ => 'Undefined',
