test/corpus/assign.txt
================================================================================
assign statements
================================================================================

k = 1

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (integer)))

================================================================================
Identifiers with '$' sign 
================================================================================

$if = 1
$else = "s"

--------------------------------------------------------------------------------

(module
      (assignment
        (dotted_name
          (identifier))
        (integer))
      (assignment
        (dotted_name
          (identifier))
        (string
          (string_start)
          (string_content)
          (string_end))))

================================================================================
augmented assign statements
================================================================================

k += 1

--------------------------------------------------------------------------------

(module
  (augmented_assignment
    (dotted_name
      (identifier))
    (integer)))
