test/corpus/literal.txt
================================================================================
string
================================================================================

""
''
""""""
"""sdadada"""

--------------------------------------------------------------------------------

(module
  (string
    (string_start)
    (string_end))
  (string
    (string_start)
    (string_end))
  (string
    (string_start)
    (string_end))
  (string
    (string_start)
    (string_content)
    (string_end)))

================================================================================
raw string
================================================================================

r"Hi\nHello"

--------------------------------------------------------------------------------

(module
  (string
    (string_start)
    (string_content)
    (string_end)))

================================================================================
Documented String
================================================================================

schema Person:
    """
    Person schema doc string
    """

    name: str = "Alice"

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (string
        (string_start)
        (string_content)
        (string_end))
      (assign_stmt
        (dotted_name
          (identifier))
        (type
          (basic_type))
        (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
number
================================================================================

1Ki
1.1
+1.1
-10

--------------------------------------------------------------------------------

(module
  (integer)
  (float)
  (unary_expr
    (float))
  (unary_expr
    (integer)))

================================================================================
name constant
================================================================================

True
False
None
Undefined

--------------------------------------------------------------------------------

(module
  (true)
  (false)
  (none)
  (undefined))

================================================================================
list
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(module
  (list_expr
    (integer)
    (integer)
    (integer)))

================================================================================
Dictionary
================================================================================

{"one" = 1}

--------------------------------------------------------------------------------

(module
  (config_expr
    (config_entries
      (config_entry
        (string
          (string_start)
          (string_content)
          (string_end))
        (integer)))))
